# ALICE-Bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: ble.rs  distributed.rs  feedback.rs  lib.rs  script.rs  sensor.rs
src/bridge/: mod.rs  signal.rs
src/bridges/: bridge_analytics.rs  bridge_edge.rs  bridge_kinematics.rs  bridge_motion.rs  bridge_physics.rs  bridge_presence.rs  bridge_streaming.rs  bridge_sync.rs  bridge_telemetry.rs  mod.rs
src/device/: actuator.rs  manager.rs  mapping.rs  mod.rs
src/protocol/: buttplug.rs  mod.rs  mqtt.rs  osc.rs  rest.rs  websocket.rs
src/safety/: emergency.rs  limiter.rs  mod.rs  ramp.rs
tests/: integration_tests.rs
